# code-quality-confidence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  pages.yml
cr_learner/: __init__.py  cli.py  config.py  extractors.py  feedback.py  integration.py  models.py  store.py
db/: init.sql
docs/: index.html
plugins/swiss-cheese/: MEMORY.md  README.md
plugins/swiss-cheese/.claude-plugin/: plugin.json
plugins/swiss-cheese/agents/: intent-agent.md  pair-agent.md  repo-analyst.md  review-architecture.md  review-core.md  review-correctness.md  review-docs.md  review-performance.md  review-security.md  review-staff.md  review-tests.md
plugins/swiss-cheese/commands/: audit.md  init.md  knowledge.md  layer.md  loop.md  review.md  status.md
plugins/swiss-cheese/hooks/: hooks.json
plugins/swiss-cheese/references/: injection-patterns.json  injection-patterns.md  layer-catalog.md  popular-packages.json
plugins/swiss-cheese/scripts/: adr_loader.py  audit_hook.py  audit_log.py  check_layers.py  commit_gate.py  diff_snapshot.py  guard_hook.py  (+8 more)
tests/: conftest.py  test_adr_loader.py  test_agents_config.py  test_audit_log.py  test_check_layers.py  test_commit_gate.py  test_diff_snapshot.py  test_extractors.py  test_feedback.py  test_guard_hook.py  test_guards.py  test_hook_gate.py  test_integration.py  test_layer_status.py  test_permissions_stanza.py  test_repo_probe.py  test_runner_detector.py  test_select_agents.py  test_store.py
(+23 files in other folders)
