[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cr-learner"
version = "0.1.0"
description = "RAG-based code-review learner — learns from GitLab MR history and injects lessons into PR-Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "python-gitlab>=4.0",
    "anthropic>=0.25",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
cr-learner = "cr_learner.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cr_learner*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
